--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   path_provider: ^2.1.3
   speech_to_text: ^7.3.0
   firebase_ai: ^3.6.1
+  cloud_functions: ^6.0.5
 
 dev_dependencies:
   flutter_test:
