--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,4 @@
+
 name: voxa
 description: "A new Flutter project."
 publish_to: 'none'
@@ -11,19 +12,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: 1.0.8
   firebase_core: 4.3.0
-  go_router: 17.0.1
-  google_fonts: 7.0.2
-  provider: 6.1.5+1
-  firebase_auth: 6.1.3
-  cloud_firestore: 6.1.1
-  firebase_storage: 13.0.5
-  path_provider: 2.1.5
-  speech_to_text: ^7.3.0
   cloud_functions: ^6.0.5
+  speech_to_text: ^7.3.0
   record: ^6.1.2
   permission_handler: ^12.0.1
+  google_fonts: 7.0.2
+  path_provider: ^2.1.5
+
 
 dev_dependencies:
   flutter_test:
